# ChangeLog for dev-perl/Bio-Graphics
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Bio-Graphics/ChangeLog,v 1.24 2011/01/13 21:13:07 tove Exp $

*Bio-Graphics-2.180 (13 Jan 2011)

  13 Jan 2011; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.180.ebuild:
  Version bump

*Bio-Graphics-2.15 (03 Nov 2010)

  03 Nov 2010; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.15.ebuild:
  Version bump

*Bio-Graphics-2.14 (20 Oct 2010)

  20 Oct 2010; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.14.ebuild:
  Version bump

  20 Oct 2010; Torsten Veller <tove@gentoo.org> -Bio-Graphics-1.994.ebuild,
  -Bio-Graphics-2.09.ebuild, -Bio-Graphics-2.10.ebuild,
  -Bio-Graphics-2.11.ebuild, -Bio-Graphics-2.12.ebuild:
  Cleanup

*Bio-Graphics-2.13 (21 Sep 2010)

  21 Sep 2010; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.13.ebuild:
  Version bump

*Bio-Graphics-2.12 (01 Sep 2010)

  01 Sep 2010; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.12.ebuild:
  Version bump

*Bio-Graphics-2.11 (16 Jul 2010)

  16 Jul 2010; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.11.ebuild:
  Version bump

*Bio-Graphics-2.10 (16 Jun 2010)

  16 Jun 2010; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.10.ebuild:
  Version bump

  11 Jun 2010; Torsten Veller <tove@gentoo.org> -Bio-Graphics-2.00.ebuild,
  -Bio-Graphics-2.01.ebuild, -Bio-Graphics-2.02.ebuild,
  -Bio-Graphics-2.04.ebuild, -Bio-Graphics-2.05.ebuild,
  -Bio-Graphics-2.06.ebuild, -Bio-Graphics-2.07.ebuild,
  -Bio-Graphics-2.08.ebuild:
  Cleanup

*Bio-Graphics-2.09 (18 May 2010)

  18 May 2010; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.09.ebuild:
  Version bump

*Bio-Graphics-2.08 (15 May 2010)

  15 May 2010; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.08.ebuild:
  Version bump

*Bio-Graphics-2.07 (09 May 2010)

  09 May 2010; Torsten Veller <tove@gentoo.org> +Bio-Graphics-2.07.ebuild:
  Version bump

*Bio-Graphics-2.06 (06 May 2010)
