@@ -1,0 +1,24 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini/CPAN-Mini-1.111.ebuild,v 1.1 2011/02/07 18:18:10 robbat2 Exp $
+
+EAPI=3
+
+MODULE_AUTHOR=RJBS
+MODULE_VERSION=1.110
+inherit perl-module
+
+DESCRIPTION="create a minimal mirror of CPAN"
+
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~sparc ~x86"
+IUSE=""
+
+RDEPEND="dev-perl/libwww-perl
+	>=virtual/perl-IO-Compress-1.20
+	dev-perl/File-HomeDir
+	>=virtual/perl-File-Path-2.08
+	dev-perl/URI"
+DEPEND="${RDEPEND}"
+
+SRC_TEST="do"
