@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Bio-Graphics
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Bio-Graphics/ChangeLog,v 1.24 2011/01/13 21:13:07 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Bio-Graphics/ChangeLog,v 1.25 2011/02/07 18:17:51 robbat2 Exp $
+
+*Bio-Graphics-2.190 (07 Feb 2011)
+
+  07 Feb 2011; Robin H. Johnson <robbat2@gentoo.org>
+  +Bio-Graphics-2.190.ebuild:
+  Version bump via perl-bump experimental tool.
 
 *Bio-Graphics-2.180 (13 Jan 2011)
 
